feat: create functionals tests
