# docs/api-spec.yml
@@ -70,8 +70,44 @@ paths:
                   expires_at:
                     type: string
                     example: '2023-12-26T02:17:53.507+00:0'
-  
-  /api/v1/drink/:id:
+        '400':
+          description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        message:
+                          type: string
+                          example: 'required validation failed"'
+        '422':
+          description: Missing required fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        rule:
+                          type: string
+                          example: 'required'
+                        required:
+                          type: string
+                          example: 'password'
+                        message:
+                          type: string
+                          example: 'required validation failed"'
+
+  /api/v1/drinks/{id}:
     get:
       tags:
         - Drinks
@@ -86,13 +122,13 @@ paths:
         '200':
           description: Success
           content:
-            json:
+            application/json:
               schema:
                 type: object
                 properties:
                   id: 
-                    type: string
-                    example: '1'
+                    type: number
+                    example: 1
                   name: 
                     type: string
                     example: 'Old Parr'
@@ -100,8 +136,8 @@ paths:
                     type: string
                     example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
                   category_id: 
-                      type: string
-                      example: '1'
+                      type: number
+                      example: 1
                   created_at: 
                     type: string
                     example: '2023-12-16T02:17:49.951+00:00'
@@ -115,18 +151,18 @@ paths:
         - Drinks
       summary: Drinks
       responses:
-        200:
+        '200':
           description: Success
           content:
-            json:
+            application/json:
               schema:
                 type: array
                 items:
                   type: object
                   properties:
                     id: 
-                      type: string
-                      example: '1'
+                      type: number
+                      example: 1
                     name: 
                       type: string
                       example: 'Old Parr'
@@ -134,8 +170,8 @@ paths:
                       type: string
                       example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
                     category_id: 
-                        type: string
-                        example: '1'
+                        type: number
+                        example: 1
                     created_at: 
                       type: string
                       example: '2023-12-16T02:17:49.951+00:00'
@@ -143,7 +179,7 @@ paths:
                       type: string
                       example: '2023-12-16T02:17:49.951+00:00'
   
-  /api/v1/category/:id/drinks:
+  /api/v1/category/{id}/drinks:
     get:
       tags:
         - Drinks
@@ -158,15 +194,15 @@ paths:
         200:
           description: Success
           content:
-            json:
+            application/json:
               schema:
                 type: array
                 items:
                   type: object
                   properties:
                     id: 
-                      type: string
-                      example: '1'
+                      type: number
+                      example: 1
                     name: 
                       type: string
                       example: 'Old Parr'
@@ -174,8 +210,8 @@ paths:
                       type: string
                       example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
                     category_id: 
-                        type: string
-                        example: '1'
+                        type: number
+                        example: 1
                     created_at: 
                       type: string
                       example: '2023-12-16T02:17:49.951+00:00'
@@ -183,7 +219,7 @@ paths:
                       type: string
                       example: '2023-12-16T02:17:49.951+00:00'
   
-  /api/v1/favorite/:id:
+  /api/v1/favorites/{id}:
     delete:
       tags:
         - Favorites
@@ -197,7 +233,7 @@ paths:
             type: integer
           required: true
       responses:
-        200:
+        204:
           description: Success
   
   /api/v1/favorites:
@@ -211,15 +247,15 @@ paths:
         200:
           description: OK
           content:
-            json:
+            application/json:
               schema:
                 type: array
                 items:
                   type: object
                   properties:
                     id: 
-                      type: string
-                      example: '1'
+                      type: number
+                      example: 1
                     name: 
                       type: string
                       example: 'Cerveja'
@@ -227,8 +263,8 @@ paths:
                       type: string
                       example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
                     category_id: 
-                      type: string
-                      example: '1'
+                      type: number
+                      example: 1
                     created_at: 
                       type: string
                       example: '2023-12-16T02:17:49.951+00:00'
@@ -239,9 +275,9 @@ paths:
     post:
       tags:
         - Favorites
+      summary: Bookmark a drink
       security:
         - BearerAuth: []
-      summary: Add favorite drink
       requestBody:
         required: true
         content:
@@ -253,5 +289,49 @@ paths:
                   type: string
                   example: '1'
       responses:
-        200:
-          description: Success
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id: 
+                    type: number
+                    example: 1
+                  name: 
+                    type: string
+                    example: 'Cerveja'
+                  description: 
+                    type: string
+                    example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+                  category_id: 
+                    type: number
+                    example: 1
+                  created_at: 
+                    type: string
+                    example: '2023-12-16T02:17:49.951+00:00'
+                  updated_at: 
+                    type: string
+                    example: '2023-12-16T02:17:49.951+00:00'
+        422:
+          description: Missing required fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        rule:
+                          type: string
+                          example: 'required'
+                        required:
+                          type: string
+                          example: 'password'
+                        message:
+                          type: string
+                          example: 'required validation failed"'
